# rules_gazebo

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
.bcr/: metadata.template.json
.github/workflows/: ci.yml  publish.yaml  release.yml  release_prep.sh  tag.yaml
gazebo/: headers.bzl
gazebo/private/: BUILD.bazel  gz_configure_file.bzl  gz_export_header.bzl  gz_include_header.bzl
test/smoke/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  config.hh.in  package.xml
test/smoke/golden/: Export.hh  config.hh
