"rules_gazebo"

module(
    name = "rules_gazebo",
    version = "0.0.6",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_python", version = "0.40.0")
